--- a/resources/index.html
+++ b/resources/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<iframe src="game.html" width="640" height="480" allow="autoplay"></iframe>
-
+<iframe src="game.html" width="640" height="480" marginheight="1" marginwidth="1" scrolling="no"
+    allow="autoplay"></iframe>
